# SmartParking

./: .gitignore  CMakeLists.txt  CMakeLists_qt.txt  README.md  SmartParkingQt.bat  build_qt.bat  main.cpp  main_qt.cpp
build_qt/: CMakeCache.txt  Makefile  cmake_install.cmake
build_qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
data/: config.json
include/core/: ParkingLot.h  ParkingSpot.h  Vehicle.h
include/managers/: BillingManager.h  SpotManager.h  VehicleManager.h
include/ui/: ConsoleUI.h
include/utils/: EntityManager.h  FileManager.h  Filter.h  RatePolicy.h  Statistics.h
src/core/: ParkingLot.cpp  ParkingSpot.cpp  Vehicle.cpp
src/managers/: BillingManager.cpp  SpotManager.cpp  VehicleManager.cpp
src/ui/: ConsoleUI.cpp
src/utils/: FileManager.cpp
tests/: test_concurrency.cpp  test_core.cpp
ui/: MainWindow.cpp  MainWindow.h  ParkingLotWidget.cpp  ParkingLotWidget.h  StatisticsPanel.cpp  StatisticsPanel.h  VehiclePanel.cpp  VehiclePanel.h
